--- a/pratice1.html
+++ b/pratice1.html
@@ -13,7 +13,7 @@
         <input type="text" placeholder="Enter Username" required>
         <input type="email" placeholder="Enter Email" required>
         <input type="password" placeholder="Enter Password" required>
-        <button type="submit">submit</button>
+        <button type="submit">Completed</button>
     </form>
 </body>
 </html>
