phone numbers form added

--- a/pratice1.html
+++ b/pratice1.html
@@ -12,6 +12,7 @@
     <form action="">
         <input type="text" placeholder="Enter Username" required>
         <input type="email" placeholder="Enter Email" required>
+        <input type="tel" placeholder="Enter Phone Number" required>
         <input type="password" placeholder="Enter Password" required>
         <button type="submit">Completed</button>
     </form>
