A prototype DIGIMON webpage

--- a/pratice1.html
+++ b/pratice1.html
@@ -4,17 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIGN UP page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pratice1.css">
     <script src="script.js" defer></script>
 </head>
-<body>
-    <h1>SIGN UP</h1>
-    <form action="">
-        <input type="text" placeholder="Enter Username" required>
-        <input type="email" placeholder="Enter Email" required>
-        <input type="tel" placeholder="Enter Phone Number" required>
-        <input type="password" placeholder="Enter Password" required>
-        <button type="submit">Completed</button>
-    </form>
+<body> 
+    <h1><a href="Order">Order</a> Now</h1>
+    <main>
+        <img src="images/Waiter_and_consument_illustration_-_Pillow_Leaf-removebg-preview.png" alt="logo" class="logo">
+        <div class="form-view"> 
+        <form action="">
+            <div class="form-group1">
+                <label for="username">Name</label>
+                <input type="text" placeholder="Enter Username" required>
+                <label for="Phone Number">Phone Number</label>
+                <input type="tel" placeholder="Enter Phone Number" required>
+                <label for="Order">Order</label>
+                <input type="text" placeholder="Enter Your Order" required>
+                <button type="submit">Completed</button>
+            </div>
+            <div class="form-group2">
+                <label for="Email">Email</label>
+                <input type="email" placeholder="Enter Email" required>
+                <label for="How much">How many order</label>
+                <input type="text" placeholder="How may Order" required>
+                <label for="Address">Home address</label>
+                <input type="text" placeholder="Enter Home Address" required>
+            </div>
+        </form>
+        </div>
+    </main>
 </body>
 </html>
