added navigation icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,33 @@
         <div class="service-head">
             <a href="#" class="sparkle" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>project</strong></p>
         </div>
-        <div>
-            <h1>Elevate Your Online Presence.</h1>
-            <p>I provide custom web development solutions for individuals and small businesses ready to make a significant impact online. My focus is on crafting bespoke websites that are not just beautiful, but strategically built to drive engagement, enhance user experience, and deliver tangible results for your brand.</p>
+        <div class="write-up">
+            <h1>Elevate Your<br>Online Presence</h1>
+            <p>I provide custom web development solutions for individuals<br>and small businesses ready to make a significant impact online.<br>My focus is on crafting bespoke websites that are not just <br>beautiful,but strategically built to drive engagement, <br>and deliver tangible results for your brand.</p>
         </div>
     </div>
-
+    <div class="images">
+        <div class="img1">
+            <img src="images/portfolio-mockup.jpg" alt="" class="first">
+            <h1>Business Website</h1>
+            <p>A modern website for a local coffee shop that emphasizes its cozy atmosphere and artisanal coffee.</p>
+        </div>
+        <div class="images2">
+            <img src="images/portfolio2.jpg" alt="" class="sec">
+            <h1>Personal Portfolio Website</h1>
+            <p>The Personal Portfolio Website is a modern, user-friendly that highlight Work and Case Study claerly and Engaging.</p>
+            <img src="images/finance-mockup.jpg" alt="" class="third">
+            <h1>Digital Finance Website</h1>
+            <p>A modern digital banking platform with a focus on user-friendly budgeting tools and investment tracking.</p>
+        </div>
+    </div>
+    <div class="navigation-arrows">
+        <button class="arrow left" aria-label="Previous">
+            <i class="fa-solid fa-chevron-left"></i>
+        </button>
+        <div class="line"></div>
+        <button class="arrow right" aria-label="Next">
+            <i class="fa-solid fa-chevron-right"></i>
+        </button>
+    </div>
 </body>
