image folder uploaded

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,4 +59,7 @@
             <i class="fa-solid fa-chevron-right"></i>
         </button>
     </div>
+    <div class="center-img">
+        <img src="images/IDEA MEETS CREATIVITY (1).jpg" alt="Center Image"> 
+    </div>
 </body>
