Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
         </button>
     </div>
     <div class="center-img">
-        <img src="images/IDEA MEETS CREATIVITY (1).jpg" alt="Center Image"> 
+        <img src="images/IDEA MEETS CREATIVITY.jpg" alt="Center Image"> 
     </div>
 </body>
