added work and client categoryy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/norwester" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
@@ -16,7 +18,7 @@
             <div class="linkd"><a href="#" class="icon linkd circle"><i class="fa-brands fa-linkedin-in"></i></a></div>
             <div class="mail"><a href="mailto:chendoprecious13@gmail.com" class="icon mail circle"><i class="fa-solid fa-envelope"></i></a></div>
         </div>
-        <div class="nav">
+        <nav class="nav">
             <ul>
                 <li><a href="" class="active">Home</a></li>
                 <li><a href="">Work</a></li>
@@ -24,7 +26,7 @@
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
     <div class="my-services">
         <div class="service-head">
@@ -35,7 +37,7 @@
             <p>I provide custom web development solutions for individuals<br>and small businesses ready to make a significant impact online.<br>My focus is on crafting bespoke websites that are not just <br>beautiful,but strategically built to drive engagement, <br>and deliver tangible results for your brand.</p>
         </div>
     </div>
-    <div class="images">
+    <main class="images">
         <div class="img1">
             <img src="images/portfolio-mockup.jpg" alt="" class="first">
             <h1>Business Website</h1>
@@ -49,7 +51,7 @@
             <h1>Digital Finance Website</h1>
             <p>A modern digital banking platform with a focus on user-friendly budgeting tools and investment tracking.</p>
         </div>
-    </div>
+    </main>
     <div class="navigation-arrows">
         <button class="arrow left" aria-label="Previous">
             <i class="fa-solid fa-chevron-left"></i>
@@ -60,6 +62,39 @@
         </button>
     </div>
     <div class="center-img">
-        <img src="images/IDEA MEETS CREATIVITY.jpg" alt="Center Image"> 
+        <div class="center-icon"><a href="#" class="spark" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>Featured Works</strong></p></div>
+
     </div>
+    <div class="work-content">
+        <div class="work-spark"><a href="#" class="spark1" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>How I Work</strong></p></div>
+        <div class="work-descrip">
+            <h1>Clarity from Concept to Code</h1>
+            <article>My end-to-end process turns complex ideas into intuitive digital<br>experiences.Through collaboration and precision,I ensure<br>every detail serves a clear goal for your users and your business.</article>
+        </div>
+        <section class="work-icons">
+            <div class="icon1">
+                <a href="#" class="search" aria-label="search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></a>
+                <h1>Research & Discovery</h1>
+                <p>Understanding your goals and audience</p>
+            </div>
+            <div class="icon2">
+                <a href="#" class="prototype" aria-label="prototype"><i class="fa-solid fa-th-large" aria-hidden="true"></i></a>
+                <h1>Wireframing & Prototyping</h1>
+                <p>Structuring Ideas in to Functional flow</p>
+            </div>
+            <div class="icon3">
+                <a href="#" class="design" aria-label="design"><i class="fa-solid fa-pen-to-square" aria-hidden="true"></i></a>
+                <h1>Visual Design</h1>
+                <p>Crafting Engaging and on-brand interfaces</p>
+            </div>
+        </section>
+    </div>
+    <section class="client">
+        <div class="client-spark"><a href="#" class="spark2" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>What Client Say</strong></p></div>
+        <div class="clients-speech">
+            <h1>Trusted & Recommended</h1>
+            <p>Real Feedback from Client who have experience my work first-hand,<br>proof that great designs not only looks good but also delivers<br>meaningful results and Lasting efforts.</p>
+        </div>
+    </section>
+    
 </body>
