work content added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/norwester" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bernoru+Semicondensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
@@ -94,6 +95,9 @@
         <div class="clients-speech">
             <h1>Trusted & Recommended</h1>
             <p>Real Feedback from Client who have experience my work first-hand,<br>proof that great designs not only looks good but also delivers<br>meaningful results and Lasting efforts.</p>
+        </div>
+        <div class="client-post">
+
         </div>
     </section>
     
