added my about me

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </button>
     </div>
     <div class="center-img">
-        <div class="center-icon"><a href="#" class="spark" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>Featured Works</strong></p></div>
+        <div class="center-icon"><a href="#" class="spark" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>About Me</strong></p></div>
 
     </div>
     <div class="work-content">
