addeded contact me info

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <div class="hero">
         <div class="social-icons">
             <div class="git"><a href="https://github.com/chendo-precious" class="icon git circle"><i class="fa-brands fa-github"></i></a></div>
-            <div class="insta"><a href="#" class="icon insta circle"><i class="fa-brands fa-instagram"></i></a></div>
-            <div class="linkd"><a href="#" class="icon linkd circle"><i class="fa-brands fa-linkedin-in"></i></a></div>
+            <div class="insta"><a href="https://www.instagram.com/mash.m007/" class="icon insta circle"><i class="fa-brands fa-instagram"></i></a></div>
+            <div class="linkd"><a href="https://www.linkedin.com/in/chendo-precious-aa3a54258/" class="icon linkd circle"><i class="fa-brands fa-linkedin-in"></i></a></div>
             <div class="mail"><a href="mailto:chendoprecious13@gmail.com" class="icon mail circle"><i class="fa-solid fa-envelope"></i></a></div>
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">Work</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#my-services">Work</a></li>
+                <li><a href="#work-content">Services</a></li>
+                <li><a href="#center-img">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
-    <div class="my-services">
+    <div id="my-services">
         <div class="service-head">
             <a href="#" class="sparkle" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>project</strong></p>
         </div>
@@ -62,11 +62,11 @@
             <i class="fa-solid fa-chevron-right"></i>
         </button>
     </div>
-    <div class="center-img">
+    <div id="center-img">
         <div class="center-icon"><a href="#" class="spark" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>About Me</strong></p></div>
 
     </div>
-    <div class="work-content">
+    <div id="work-content">
         <div class="work-spark"><a href="#" class="spark1" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>How I Work</strong></p></div>
         <div class="work-descrip">
             <h1>Clarity from Concept to Code</h1>
@@ -100,5 +100,19 @@
 
         </div>
     </section>
-    
+    <section id="contact">
+        <div class="contact-spark"><a href="#" class="spark3" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>Contact Me</strong></p></div>
+        <form class="contact-form">
+            <label for="Name">Full Name</label>
+            <input type="text" placeholder="Name" required>
+            <label for="Email">Email Address</label>
+            <input type="email" placeholder="Email" required>
+            <label for="Message">Input Your Message</label>
+            <textarea placeholder="Message" required></textarea>
+            <a href="mailto:chendoprecious13@gmail.com"><button type="submit">Send Message</button></a>
+        </form>
+        <div class="contact-explain">
+            <p>Reach Out to me lets Bring Innovation to Life</p>
+        </div>
+    </section>
 </body>
