--- a/index.html
+++ b/index.html
@@ -102,17 +102,19 @@
     </section>
     <section id="contact">
         <div class="contact-spark"><a href="#" class="spark3" aria-label="sparkle"><i class="fa-solid fa-star" aria-hidden="true"></i></a><p><strong>Contact Me</strong></p></div>
-        <form class="contact-form">
-            <label for="Name">Full Name</label>
-            <input type="text" placeholder="Name" required>
-            <label for="Email">Email Address</label>
-            <input type="email" placeholder="Email" required>
-            <label for="Message">Input Your Message</label>
-            <textarea placeholder="Message" required></textarea>
-            <a href="mailto:chendoprecious13@gmail.com"><button type="submit">Send Message</button></a>
-        </form>
-        <div class="contact-explain">
-            <p>Reach Out to me lets Bring Innovation to Life</p>
+        <div class="contact-form">
+            <form>
+                <label for="Name">Full Name</label>
+                <input type="text" placeholder="Name" required>
+                <label for="Email">Email Address</label>
+                <input type="email" placeholder="Email" required>
+                <label for="Message">Input Your Message</label>
+                <textarea placeholder="Message" required></textarea>
+                <a href="mailto:chendoprecious13@gmail.com"><button type="submit">Send Message</button></a>
+            </form>
         </div>
     </section>
 </body>
+<footer>
+    <marquee behavior="" direction="right">Reach Out to me lets Bring Innovation to Life. &copy; 2024 Chendo Precious. All rights reserved.</marquee>
+</footer>
